HelloUltraviolet/Fixtures/RejectedSource/Statements/AsyncReturnUnitMismatch/Source/Main.uv
//! Rejected statement specimen for empty async return with non-unit result.

public procedure asyncReturnUnitMismatchReference() -> Async<(), (), i32, !> {
    return
}
